# deskTopNiuma

./: .gitignore  build-tauri.bat  build.bat  tauri-build-troubleshooting-skill.md
deskTopPet-app/: build.bat  dev.bat  index.html  package-lock.json  package.json  pong-game.html  tsconfig.json  vite.config.ts
deskTopPet-app/src/: App.vue
deskTopPet-app/src-tauri/: Cargo.toml  tauri.conf.json
deskTopPet-app/src-tauri/capabilities/: default.json
deskTopPet-app/src-tauri/src/: lib.rs  main.rs
deskTopPet-app/src/assets/styles/: main.css
deskTopPet-app/src/components/: ControlPanel.vue  DailyReport.vue  NovelPanel.vue  PetAvatar.vue  PongGameWrapper.vue  RadialMenu.vue  SettingsPanel.vue  SidePanel.vue  WageDisplay.vue
deskTopPet-app/src/composables/: useDraggable.ts  useSettings.ts  useTauri.ts  useWageCalculator.ts
deskTopPet-app/src/pong-game/: PongGame.vue  PongGameCore.ts  PongNetwork.ts  main.ts
deskTopPet-app/src/stores/: wageStore.ts
deskTopPet-app/src/types/: index.ts
deskTopPet-app/src/utils/: alphaMask.ts
