[package]
name = "niuma-wage-calculator"
version = "1.0.0"
description = "牛马工资计算器 - 桌面宠物小组件"
authors = ["you"]
edition = "2021"

[lib]
name = "niuma_wage_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
